@@ -1,3 +1,9 @@
+2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* configure:
+	* AssemblyInfo.cs:
+	* MonoDevelop.AddinAuthoring.addin.xml: Bumped MD version.
+
 2010-02-18  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.AddinAuthoring/ExtensionEditorWidget.cs:
